[package]
name = "wormhole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = {version = "0"}
# winit = {git = "https://github.com/rust-windowing/winit.git", branch="master"}
wgpu = {version = "22", features = ["spirv"]}
# wgpu = {git = "https://github.com/gfx-rs/wgpu.git", branch="trunk"}
pollster = {version = "0"}
env_logger = {version = "0"}
log = {version = "0"}
bytemuck = {version = "1"}
cgmath = {version = "0"}
autodiff = {version = "0", features = ["cgmath"]}
encase = {version = "0", features = ["cgmath"]}
graph_builder = {version = "0"}
ndarray = "0.16.1"
einsum-derive = "0.1.0"
